--- a/package.json
+++ b/package.json
@@ -4,9 +4,16 @@
   "description": "Light weight, modern, easy to use task tracking app",
   "main": "main.js",
   "author": "zhwatts",
+  "scripts": {
+    "start": "electron ."
+  },
   "license": "no",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.8.2",
     "jquery": "^3.4.1"
+  },
+  "devDependencies": {
+    "electron": "^5.0.1"
   }
 }
