--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.8.2",
-    "jquery": "^3.4.1"
+    "jquery": "^3.4.1",
+    "moment": "^2.24.0",
+    "moment-duration-format": "^2.2.2",
+    "moment-timer": "^1.3.0"
   },
   "devDependencies": {
     "electron": "^5.0.1"
