--- a/package.json
+++ b/package.json
@@ -14,9 +14,13 @@
     "jquery": "^3.4.1",
     "moment": "^2.24.0",
     "moment-duration-format": "^2.2.2",
-    "moment-timer": "^1.3.0"
+    "moment-timer": "^1.3.0",
+    "webpack-jquery-ui": "^2.0.1"
   },
   "devDependencies": {
-    "electron": "^5.0.1"
+    "css-loader": "^2.1.1",
+    "electron": "^5.0.1",
+    "file-loader": "^3.0.1",
+    "style-loader": "^0.23.1"
   }
 }
