--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "css-loader": "^2.1.1",
     "electron": "^5.0.1",
     "file-loader": "^3.0.1",
+    "handlebars": "^4.1.2",
+    "handlebars-loader": "^1.7.1",
     "style-loader": "^0.23.1"
   }
 }
